[package]
name = "Rust_WSAM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
base64 = "0.22.0"
image = "0.25.1"

[dependencies.web-sys]
version = "0.3.69"
features = ["console"]
